solve changes related to wins per day, week, month, admin permission, super admin permissions